--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "html-pdf-node": "^1.0.7",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
