--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.2.0",
+    "downloadjs": "^1.4.7",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "html-pdf-node": "^1.0.7",
